Fix spacing on song page play and add buttons
client_last/tv/songs/song page

--- a/project/client_last/tv/songs/css/general.css
+++ b/project/client_last/tv/songs/css/general.css
@@ -493,3 +493,8 @@ a {
 .btn-playlist:hover {
     color: #2BB4C4 !important;
 }
+
+#details button {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
